k8s/manifests/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
