k8s/manifests/client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client
              port:
                number: 80
